			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

25-Oct-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

22-Oct-2003
~~~~~~~~~~~
Added optional top and bottom margines for iconized window placement
(Stephen Watson).

16-Oct-2003
~~~~~~~~~~~
Don't lower the panel due when the pointer 'leaves' due to a grab (eg, clicking
or opening a menu).

15-Oct-2003
~~~~~~~~~~~
Bugfix: FreeBSD reported file sizes with units of 'null' due to large file
	support not being detected (igla).

14-Oct-2003
~~~~~~~~~~~
Larger default size for bookmarks editor (requested by Matthew Weier OPhinney).

13-Oct 2003
~~~~~~~~~~~
Let the thumbnail helpers be app dirs, plus can be set from the Set Icon
dialog (Stephen Watson).

09-Oct-2003
~~~~~~~~~~~
Improved socket icon (taken from Howard Shane's new theme).

08-Oct-2003
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Updated German translation (Guido Schimmels).
Offer Eject even for unmounted disks (reported by Matthew Weier O'Phinney).
Try to load icons at 'huge' size, so SVG icons get the chance to scale up
nicely.

07-Oct-2003 (Release 2.1.0)
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).
Removed some dead code, memory leaks, etc that had crept in.

04-Oct-2003
~~~~~~~~~~~
New icon for selection ops.

03-Oct-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

01-Oct-2003
~~~~~~~~~~~
Minor fix to German translation (Daniel Pörsch).

30-Sep-2003
~~~~~~~~~~~
Update error message about missing MIME database to give the new URI.

29-Sep-2003
~~~~~~~~~~~
Stock icons in panel and pinboard menus.
Added icon theme selector.

28-Sep-2003
~~~~~~~~~~~
Added 'Customise Menu' to file menu. Use this to replace Format and Free.

27-Sep-2003
~~~~~~~~~~~
Allow icons in Choices to override the theme.

26-Sep-2003
~~~~~~~~~~~
Bugfix: If no pinboard or panel icons were present, the menu could not be
	opened (reported by John Pettigrew).

22-Sep-2003
~~~~~~~~~~~