@@ -43,6 +43,7 @@
         <vbox>
           <toggle name='bind_new_button_1' label='New window on button 1'>Clicking with mouse button 1 (usually the left button) opens a directory in a new window with this turned on. Clicking with the button-2 (middle) will reuse the current window.</toggle>
           <toggle name='bind_single_click' label='Single-click navigation'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
+          <toggle name='bind_dclick_resizes' label='Double-click on background resizes'>If on then double clicking on the window background resizes the window, just like clicking on the Automatic size mode button in the toolbar.</toggle>
         </vbox>
       </hbox>
     </frame>
