@@ -5,6 +5,7 @@
 25-Oct-2003
 ~~~~~~~~~~~
 Updated Dutch translation (Jan Wagemakers).
+Resizing by double clicking on background now options (Stephen Watson).
 
 22-Oct-2003
 ~~~~~~~~~~~
